[package]
name    = "rust_dll_template"
version = "0.1.0"

authors = ["Galen von Lalande, a.k.a. amnestria"]
edition = "2021"

[lib]
name       = "rust_dll_template"
crate-type = ["cdylib"]

[dependencies.windows]
version  = "0.58.0"
features = [
  "Win32_System_SystemServices",
  "Win32_System_LibraryLoader",
]
